[project]
name = "oposim"
version = "1.0.0"
description = "Simulador de Sorteos de Temas de Oposición - Calcula probabilidades y practica con simulaciones"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Francisco Sánchez", email = "franciscosanchezn@users.noreply.github.com" }
]
keywords = ["oposiciones", "simulador", "educación", "streamlit", "probabilidad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "scipy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/franciscosanchezn/simulador-oposiciones"
Repository = "https://github.com/franciscosanchezn/simulador-oposiciones"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
